# controllers/events.js
@@ -1,4 +1,5 @@
 const mongo = require('../db/connect');
+const ObjectId = require('mongodb').ObjectId;
 
 async function getEvents(req, res, next){
     // #swagger.tags = ['Events']
@@ -27,8 +28,8 @@ async function createEvent(req, res, next) {
             $eventDescription: 'We went to St George and ...',
             $lat: 37.0965,
             $long: 113.5684,
-            $eventStartDate: '2/15/2020',
-            $eventEndDate: '2/20/2020'
+            $eventStartDate: '2011-10-05T14:48:00.000Z',
+            $eventEndDate: '2011-10-05T14:48:00.000Z'
         }
     } */
     const event = req.body;
@@ -42,7 +43,63 @@ async function createEvent(req, res, next) {
     }
 }
 
+async function updateEvent(req, res, next){
+
+    // #swagger.tags = ['Events']
+    // #swagger.summary = 'Update event by Id'
+    // #swagger.description = 'This is a request to update a given contact record'
+    /* #swagger.parameters['id'] = {
+        in: 'path',
+        description: 'Event ID.',
+        required: true,
+        type: 'string'
+    } 
+      #swagger.parameters['event'] = { 
+        in: 'body',
+        description: 'Event object',
+        required: true,
+        schema: {
+            eventName: 'First Anniversary',
+            eventDescription: 'We went to St George and ...',
+            lat: 37.0965,
+            long: 113.5684,
+            eventStartDate: '2011-10-05T14:48:00.000Z',
+            eventEndDate: '2011-10-05T14:48:00.000Z'
+        }
+
+     } */
+
+    const eventId = new ObjectId(req.params.id);
+    const collection = mongo.getConnection().db('memory-lanes-db').collection('event');
+
+    try {
+        const result = await collection.updateOne({_id: eventId}, {$set: req.body});
+        res.send(result).status(204);
+    } catch (error) {
+        res.status(501).send("Error updating event: " + error);
+    }
+}
+
+async function deleteEvent(req, res, next){
+    // #swagger.tags = ['Events']
+    // #swagger.summary = 'Deletes a given event'
+    // #swagger.description = 'This request deletes a given event record'
+    // #swagger.parameters['id'] = { description: 'Event id' }
+
+    const eventId = new ObjectId(req.params.id);
+    const collection = mongo.getConnection().db('memory-lanes-db').collection('event');
+
+    try {
+        const result = await collection.deleteOne({_id: eventId});
+        res.status(200).send(`{"responseMessage": "Event record (${eventId}) was deleted successfully"}`);
+    } catch (error) {
+        res.status(502).send(`{"responseMessage": "Something went wrong when trying to delete event ${eventId}: ${error}"}`);
+    }
+}
+
 module.exports = {
     getEvents,
     createEvent,
+    updateEvent,
+    deleteEvent,
 }
